HW5SERVER/tests/output/t23.out
lli: tmp.ll:97:15: error: '%t19' defined with type 'i1' but expected 'i32'
%t24 = or i32 %t19, %t23
              ^
